k8s/ingress/bluegreen-service.yaml
apiVersion: v1
kind: Service

metadata:
  name: performance-api-bg
  namespace: performance-platform

spec:
  type: ClusterIP

  selector:
    app: performance-api-bg
    version: blue

  ports:
    - name: http
      port: 8000
      targetPort: 8000
